--- a/app.gradle
+++ b/app.gradle
@@ -123,6 +123,9 @@ android {
             dimension "flavor"
             minSdkVersion Integer.parseInt(_M_SDK)
             resValue "bool", "is_preview", "false"
+
+            //applicationId "com.angcyo.xxx.xxx"
+            //versionName project.hasProperty("V_NAME_RELEASE") ? project.ext.V_NAME_RELEASE : project.ext.V_NAME
         }
     }
     buildTypes {
