--- a/libBase.gradle
+++ b/libBase.gradle
@@ -15,6 +15,8 @@ def lib_use_proguard_debug = project.hasProperty("lib_use_proguard_debug") ? (pr
 def lib_minify_enabled = project.hasProperty("lib_minify_enabled") ? (project.ext.lib_minify_enabled == "true") : lib_minify_enabled_debug
 def lib_use_proguard = project.hasProperty("lib_use_proguard") ? (project.ext.lib_use_proguard == "true") : lib_minify_enabled
 
+//println "minSdk:" + M_SDK
+
 //println "kotlin版本:" + _kotlin_version
 //println project.getName()
 //println project.getDisplayName()
@@ -94,7 +96,9 @@ dependencies {
     api fileTree(dir: 'libs', include: ['*.aar'])
 
     //https://jcenter.bintray.com/org/jetbrains/kotlin/kotlin-stdlib-jdk8/
+    //api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$_kotlin_version"
     //api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$_kotlin_version" //2022-11-4插件会自动依赖
+    //api "org.jetbrains.kotlin:kotlin-stdlib:$_kotlin_version" //2023-04-14 jdk7/8合并
 }
 
 //apply from: allGradle.version
