--- a/versionConfigLib.gradle
+++ b/versionConfigLib.gradle
@@ -1,45 +1,54 @@
 //配置强制版本信息
 ext.libVersionConfig = [
         //https://mvnrepository.com/artifact/androidx.annotation
-        "androidx.annotation:annotation"      : "1.3.0",
+        //https://mvnrepository.com/artifact/androidx.annotation/annotation
+        "androidx.annotation:annotation"      : "1.6.0",
 
         //https://mvnrepository.com/artifact/androidx.appcompat
-        "androidx.appcompat:appcompat"        : "1.4.1",
+        //https://mvnrepository.com/artifact/androidx.appcompat/appcompat
+        //"androidx.appcompat:appcompat"        : "1.5.1", //minCompileSdk (32)
+        "androidx.appcompat:appcompat"        : "1.6.1",
 
         //https://mvnrepository.com/artifact/androidx.loader
+        //https://mvnrepository.com/artifact/androidx.loader/loader
         "androidx.loader:loader"              : "1.1.0",
 
         //https://mvnrepository.com/artifact/androidx.exifinterface
-        "androidx.exifinterface:exifinterface": "1.3.3",
+        //https://mvnrepository.com/artifact/androidx.exifinterface/exifinterface
+        "androidx.exifinterface:exifinterface": "1.3.6",
 ]
 
-def fragment = "1.4.1"
+def fragment = "1.5.7"
 ext.libVersionConfig << [
         //"org.jetbrains.kotlin:kotlin-stdlib"              : "1.3.61",
         //"org.jetbrains.kotlin:kotlin-stdlib-common"       : "1.3.61",
 
         //https://mvnrepository.com/artifact/androidx.fragment
+        //https://mvnrepository.com/artifact/androidx.fragment/fragment
         "androidx.fragment:fragment"    : fragment,
         "androidx.fragment:fragment-ktx": fragment,
 ]
 
-def activity = "1.4.0"
+def activity = "1.7.1"
 ext.libVersionConfig << [
         //https://mvnrepository.com/artifact/androidx.activity/
+        //https://mvnrepository.com/artifact/androidx.activity/activity
         "androidx.activity:activity"    : activity,
         "androidx.activity:activity-ktx": activity,
 ]
 
-def core = "1.7.0"
+def core = "1.10.0"
 ext.libVersionConfig << [
         //https://mvnrepository.com/artifact/androidx.core
+        //https://mvnrepository.com/artifact/androidx.core/core
         "androidx.core:core"    : core,
         "androidx.core:core-ktx": core,
 ]
 
-def core_common = "2.1.0"
+def core_common = "2.2.0"
 ext.libVersionConfig << [
         //https://mvnrepository.com/artifact/androidx.arch.core
+        //https://mvnrepository.com/artifact/androidx.arch.core/core-common
         "androidx.arch.core:core-common" : core_common,
         "androidx.arch.core:core-runtime": core_common,
 ]
@@ -47,6 +56,7 @@ ext.libVersionConfig << [
 def collection = "1.2.0"
 ext.libVersionConfig << [
         //https://mvnrepository.com/artifact/androidx.collection
+        //https://mvnrepository.com/artifact/androidx.collection/collection
         "androidx.collection:collection"    : collection,
         "androidx.collection:collection-ktx": collection,
 ]
@@ -54,13 +64,15 @@ ext.libVersionConfig << [
 def transition = "1.4.1"
 ext.libVersionConfig << [
         //https://mvnrepository.com/artifact/androidx.transition
+        //https://mvnrepository.com/artifact/androidx.transition/transition
         "androidx.transition:transition"    : transition,
         "androidx.transition:transition-ktx": transition,
 ]
 
-def lifecycle = "2.4.1"
+def lifecycle = "2.6.1"
 ext.libVersionConfig << [
         //https://mvnrepository.com/artifact/androidx.lifecycle
+        //https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-common
         "androidx.lifecycle:lifecycle-common"           : lifecycle,
         "androidx.lifecycle:lifecycle-runtime"          : lifecycle,
         "androidx.lifecycle:lifecycle-livedata"         : lifecycle,
@@ -72,9 +84,10 @@ ext.libVersionConfig << [
         "androidx.lifecycle:lifecycle-process"          : lifecycle,
 ]
 
-def kotlinx = "1.6.0"
+def kotlinx = "1.6.4"
 ext.libVersionConfig << [
         //https://mvnrepository.com/artifact/org.jetbrains.kotlinx
+        //https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core
         "org.jetbrains.kotlinx:kotlinx-coroutines-core"   : kotlinx,
         "org.jetbrains.kotlinx:kotlinx-coroutines-android": kotlinx,
 ]
@@ -82,19 +95,29 @@ ext.libVersionConfig << [
 ext.libVersionConfig += [
 
         //https://mvnrepository.com/artifact/androidx.coordinatorlayout
+        //https://mvnrepository.com/artifact/androidx.coordinatorlayout/coordinatorlayout
         "androidx.coordinatorlayout:coordinatorlayout": "1.2.0",
 
         //https://mvnrepository.com/artifact/androidx.recyclerview
-        "androidx.recyclerview:recyclerview"          : "1.2.0",
+        //https://mvnrepository.com/artifact/androidx.recyclerview/recyclerview
+        "androidx.recyclerview:recyclerview"          : "1.3.0",
 
         //https://mvnrepository.com/artifact/com.google.code.gson
-        "com.google.code.gson:gson"                   : "2.8.9", //2.9.0
+        //https://mvnrepository.com/artifact/com.google.code.gson/gson
+        "com.google.code.gson:gson"                   : "2.10.1", //2.9.0
 
         //https://mvnrepository.com/artifact/com.squareup.okhttp3
-        "com.squareup.okhttp3:okhttp"                 : "4.9.3",
+        //https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+        "com.squareup.okhttp3:okhttp"                 : "4.11.0",
 
+        //https://mvnrepository.com/artifact/com.google.android.material
         //https://mvnrepository.com/artifact/com.google.android.material/material
-        "com.google.android.material:material"        : "1.5.0",
+        "com.google.android.material:material"        : "1.6.1", //1.8.0 1.7.0 1.6.1
+
+        //https://mvnrepository.com/artifact/io.reactivex.rxjava2/
+        //https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava
+        "io.reactivex.rxjava2:rxjava"                 : "2.2.21",
+
 ]
 
 
