* fix rust gradle

--- a/rustLib.gradle
+++ b/rustLib.gradle
@@ -1,9 +1,17 @@
 /**
  * 在Library中使用Rust
  * 2023-5-18
+ *
+ * Rust:
+ * https://www.rust-lang.org/zh-CN/
+ *
+ * Rust包管理:
+ * https://crates.io/
+ *
  * */
 
-apply plugin: 'org.mozilla.rust-android-gradle.rust-android'
+//apply from: allGradle.rustBase
+apply from: "$gradleHost/master/rustBase.gradle"
 
 afterEvaluate {
     // The `cargoBuild` task isn't available until after evaluation.
@@ -19,22 +27,3 @@ afterEvaluate {
     }
 }
 
-// https://github.com/mozilla/rust-android-gradle#configuration 配置项
-cargo {
-    module = "../rust"            // Or whatever directory contains your Cargo.toml
-    libname = "rust"              // Or whatever matches Cargo.toml's [package] name.
-    //["arm", "arm64", "x86", "x86_64"]    // See bellow for a longer list of options
-    targets = ["arm", "arm64"]
-    //profile = 'release' //Defaults to "debug"
-    verbose = true
-
-    prebuiltToolchains = true
-    //targetDirectory = 'path/to/workspace/root/target'
-    apiLevel = 21
-
-    //androidNdkToolchainDir
-    //pythonCommand
-    //cargoCommand
-
-    //rustupChannel
-}
