* fix rust gradle

--- a/rustApp.gradle
+++ b/rustApp.gradle
@@ -10,7 +10,8 @@
  *
  * */
 
-apply from: allGradle.rustBase
+//apply from: allGradle.rustBase
+apply from: "$gradleHost/master/rustBase.gradle"
 
 afterEvaluate {
     // The `cargoBuild` task isn't available until after evaluation.
