--- a/app.gradle
+++ b/app.gradle
@@ -12,6 +12,11 @@ apply plugin: 'kotlin-android'
 //apply plugin: 'com.getkeepsafe.dexcount'
 //apply from: 'build_time.gradle'
 
+//plugins {
+//  id 'com.android.application'
+//  id 'org.jetbrains.kotlin.android'
+//}
+
 //apply from: allGradle.appBase
 //apply from: allGradle.aar //2022-05-08 remove
 //apply from: allGradle.key
