--- a/app.gradle
+++ b/app.gradle
@@ -103,7 +103,11 @@ android {
 //        }
 //    }
 
-    flavorDimensions = ['flavor']
+    if (gradle.gradleVersion.charAt(0) >= '8') {
+        flavorDimensions = ['flavor']
+    } else {
+        flavorDimensions 'flavor'
+    }
     productFlavors {
         //develop
         _dev {
