--- a/initSettings.gradle
+++ b/initSettings.gradle
@@ -1,23 +1,40 @@
 //AGP 7.+
 if (gradle.gradleVersion.charAt(0) >= '7') {
+
+    pluginManagement {
+        repositories {
+            gradlePluginPortal()
+            google()
+            mavenCentral()
+            maven { url 'https://jcenter.bintray.com' }
+        }
+    }
+
     dependencyResolutionManagement {
         repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
         repositories {
-            //https://maven.aliyun.com/mvn/
-            //central仓和jcenter仓的聚合仓
-            maven { url 'https://maven.aliyun.com/repository/public' }
-            maven { url 'https://maven.aliyun.com/repository/google' }
-            maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
-
             google()
             //jcenter()
+            maven { url 'https://jcenter.bintray.com' }
 
             //https://mvnrepository.com/
             //https://search.maven.org
             mavenCentral()
 
+            //https://maven.aliyun.com/mvn/
+            //central仓和jcenter仓的聚合仓
+            //maven { url 'https://maven.aliyun.com/repository/public' }
+            //maven { url 'https://maven.aliyun.com/repository/google' }
+            //maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+
             maven { url 'https://jitpack.io' }
             maven { url "https://gitcode.net/angcyo/maven/-/raw/master" }
+
+            //maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
+            //maven { url "https://gitee.com/angcyo/bmob-android-sdk/raw/master" }
+            //maven { url 'https://dl.bintray.com/chaozhouzhang/maven' }
+
+            maven { url 'https://dl.bintray.com/umsdk/release' }
         }
     }
 }
