--- a/appBase.gradle
+++ b/appBase.gradle
@@ -1,27 +1,10 @@
 def build_time = getBuildTime()
 
 def schema = project.hasProperty("schema") ? project.ext.schema : 'default'
-def versionCode = ''
-def versionName = ''
+def versionCode = android.defaultConfig.versionCode
+def versionName = android.defaultConfig.versionName
 
-println "appRes.gradle↓\n开始编译:schema:" + schema + " time->" + build_time + "\n" + osName() + "/" + userName()
-
-//[libBase.gradle]
-def childProjects = rootProject.getChildProjects()
-childProjects.each {
-    def application = "com.android.application"
-
-    def projectObj = it.value
-    def isApp = projectObj.plugins.hasPlugin(application)
-
-    if (isApp) {
-        def applicationPlugin = projectObj.plugins.findPlugin(application)
-        //自动获取 主工程的 sdk配置信息
-        //println applicationPlugin.extension.defaultConfig
-        versionCode = applicationPlugin.extension.defaultConfig.versionCode
-        versionName = applicationPlugin.extension.defaultConfig.versionName
-    }
-}
+println "appBase.gradle↓\n开始编译[${versionCode}/${versionName}]:schema:" + schema + " time->" + build_time + "\n" + osName() + "/" + userName()
 
 android {
 
