--- a/pgyer.gradle
+++ b/pgyer.gradle
@@ -8,6 +8,7 @@
  * https://www.pgyer.com/doc/view/app_upload
  * https://www.pgyer.com/doc/view/api#uploadApp
  *
+ * www.pgyer.com
  * 2023-9-22
  * 蒲公英域名更改: https://www.xcxwo.com/
  *
@@ -35,10 +36,10 @@ ext.pgyerConfig = [
 
         //请求的api地址
         //https://www.pgyer.com/doc/view/api#uploadApp
-        "pgyerUrl"         : "https://www.xcxwo.com/apiv2/app/upload",
+        "pgyerUrl"         : "https://www.pgyer.com/apiv2/app/upload",
 
-        //官网, 用于拼接短地址 必须/结尾.
-        "pgyer"            : "https://www.xcxwo.com/",
+        //官网, 用于拼接短地址 必须/结尾. //www.xcxwo.com //www.pgyer.com
+        "pgyer"            : "https://www.pgyer.com/",
 
         "pgyer_api_key"    : "",
         "pgyer_user_key"   : "",
